--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
-
-:root {
-  --color-primary: #4d41c0;
-}
-
-* {
-  box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
-}
-
-html,
 body {
-  background-color: #e5e5e5;
-}
-
-a,
-a:hover {
-  text-decoration: none;
-  color: unset;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background: "#dfdfdf";
 }
